package club.piggyplanner.services.account.domain.model

enum class RecordType(val translationKey: String) {
    INCOME("t(income)"),
    EXPENSE("t(expense)")
}