package club.piggyplanner.services.account.domain.model

import java.util.*

data class UserId(val id: UUID)